--- a/ci/infrastructure/pipeline.yml
+++ b/ci/infrastructure/pipeline.yml
@@ -255,7 +255,8 @@ jobs:
   serial: true
   plan:
   - aggregate:
-    - get: bosh-lites-dea-pool
+    - get: bosh-lite-lock
+      resource: bosh-lites-dea-pool
       passed: [deploy-diego-release-1]
       trigger: true
     - get: cf-routing-release
@@ -367,7 +368,8 @@ jobs:
   serial: true
   plan:
   - aggregate:
-    - get: bosh-lites-dea-pool
+    - get: bosh-lite-lock
+      resource: bosh-lites-dea-pool
       passed: [deploy-diego-release-2]
       trigger: true
     - get: cf-routing-release
@@ -487,7 +489,8 @@ jobs:
   serial: true
   plan:
   - aggregate:
-    - get: bosh-lites-dea-pool
+    - get: bosh-lite-lock
+      resource: bosh-lites-dea-pool
       passed: [deploy-diego-release-3]
       trigger: true
     - get: cf-routing-release
@@ -603,7 +606,8 @@ jobs:
   serial: true
   plan:
   - aggregate:
-    - get: bosh-lites-diego-pool
+    - get: bosh-lite-lock
+      resource: bosh-lites-diego-pool
       passed: [deploy-diego-release-4]
       trigger: true
     - get: cf-routing-release
@@ -718,7 +722,8 @@ jobs:
   serial: true
   plan:
   - aggregate:
-    - get: bosh-lites-acceptance-pool
+    - get: bosh-lite-lock
+      resource: bosh-lites-acceptance-pool
       passed: [deploy-diego-release]
       trigger: true
     - get: cf-routing-release
