Revert "run tasks CATs if diego is enabled"
This reverts commit cef1236dc4c12f385182ce7fcde509728629147e.

Signed-off-by: Anand Gaitonde <agaitonde@pivotal.io>

--- a/ci/cli/tasks/cats-config.yml
+++ b/ci/cli/tasks/cats-config.yml
@@ -59,6 +59,6 @@ run:
       "include_services": true,
       "include_ssh": $IS_DIEGO_ENABLED,
       "include_sso": false,
-      "include_tasks": $IS_DIEGO_ENABLED
+      "include_tasks": false
     }
     EOF
