set binary version, sha and build date from ldflags
- Default version changed from "BUILT_FROM_SOURCE-BUILT_AT_UNKNOWN_TIME"
to "0.0.0-unknown-version"
- Build date is separated with a '.' not a '-' because this is what the
semver library uses to separate out metadata.
- Config should be used to get version in actors/commands, not use
version.VersionString() directly. Old code uses version.VersionString()
because it has no access to config.

[finishes #133665239, #106234640]

Signed-off-by: Anand Gaitonde <agaitonde@pivotal.io>

--- a/bin/build
+++ b/bin/build
@@ -10,4 +10,13 @@ if [[ $(git status --porcelain cf/i18n/resources) ]]; then
   $ROOT_DIR/bin/generate-language-resources
 fi
 
-go build -o $ROOT_DIR/out/cf .
+BUILD_VERSION=$(cat ci/VERSION)
+BUILD_SHA=$(git rev-parse --short HEAD)
+BUILD_DATE=$(date -u +"%Y-%m-%d")
+
+go build \
+  -o $ROOT_DIR/out/cf \
+  -ldflags "-X code.cloudfoundry.org/cli/version.binaryVersion=${BUILD_VERSION} \
+            -X code.cloudfoundry.org/cli/version.binarySHA=${BUILD_SHA} \
+            -X code.cloudfoundry.org/cli/version.binaryBuildDate=${BUILD_DATE}" \
+  .
