--- a/cli/tasks/build-osx-binary.yml
+++ b/cli/tasks/build-osx-binary.yml
@@ -24,10 +24,14 @@ run:
     go version
 
     pushd $GOPATH/src/code.cloudfoundry.org/cli
-      bin/replace-sha
+      BUILD_VERSION=$(cat ci/VERSION)
+      BUILD_SHA=$(git rev-parse --short HEAD)
+      BUILD_DATE=$(date -u +"%Y-%m-%d")
+
+      VERSION_LDFLAGS="-X code.cloudfoundry.org/cli/version.binaryVersion=${BUILD_VERSION} -X code.cloudfoundry.org/cli/version.binarySHA=${BUILD_SHA} -X code.cloudfoundry.org/cli/version.binaryBuildDate=${BUILD_DATE}"
 
       echo "Building 64-bit Darwin"
-      GOARCH=amd64 GOOS=darwin go build -o out/cf-cli_osx .
+      GOARCH=amd64 GOOS=darwin go build -ldflags "${VERSION_LDFLAGS}" -o out/cf-cli_osx .
 
       echo "Creating tarball"
       tar -cvzf $cwd/osx-compiled/cf-cli-osx-binary.tgz -C out .
