--- a/cli-release/tasks/update-brew-formula.yml
+++ b/cli-release/tasks/update-brew-formula.yml
@@ -46,6 +46,8 @@ run:
 
       def install
         bin.install 'cf'
+        doc.install 'LICENSE'
+        doc.install 'NOTICE'
       end
 
       test do
