added LICENSE and NOTICE to brew formula and deleted unnecessary formula
[#137159413, #137395117]

Signed-off-by: Alex Melnik <aleksandr.s.melnik@hpe.com>

--- a/ci/cli-release/tasks/update-brew-formula.yml
+++ b/ci/cli-release/tasks/update-brew-formula.yml
@@ -46,6 +46,8 @@ run:
 
       def install
         bin.install 'cf'
+        doc.install 'LICENSE'
+        doc.install 'NOTICE'
       end
 
       test do
