--- a/installers/rpm/cf-cli.spec.template
+++ b/installers/rpm/cf-cli.spec.template
@@ -16,13 +16,15 @@ mkdir -p $RPM_BUILD_ROOT/usr/bin
 mkdir -p $RPM_BUILD_ROOT/usr/share/doc/cf-cli
 cd $RPM_BUILD_ROOT
 cp %{SOURCEURL0}/cf ./usr/bin/cf
-cp %{SOURCEURL0}/COPYING ./usr/share/doc/cf-cli/COPYING
+cp %{SOURCEURL0}/LICENSE ./usr/share/doc/cf-cli/LICENSE
+cp %{SOURCEURL0}/NOTICE ./usr/share/doc/cf-cli/NOTICE
 
 %clean
 rm -rf "$RPM_BUILD_ROOT"
 
 %files
 %defattr(644,root,root)
-/usr/share/doc/cf-cli/COPYING
+%license /usr/share/doc/cf-cli/LICENSE
+/usr/share/doc/cf-cli/NOTICE
 %defattr(755,root,root)
 /usr/bin/cf
