--- a/cli-release/tasks/sign-and-repackage-installers-and-binaries.yml
+++ b/cli-release/tasks/sign-and-repackage-installers-and-binaries.yml
@@ -25,6 +25,9 @@ run:
 
     VERSION=$(cat cli/ci/VERSION)
 
+    cp cli/ci/license/LICENSE-WITH-3RD-PARTY-LICENSES LICENSE
+    cp cli/ci/license/NOTICE .
+
     mkdir win32 win64
     cp extracted-binaries/cf-cli_win32.exe win32/cf.exe
     cp extracted-binaries/cf-cli_winx64.exe win64/cf.exe
@@ -43,7 +46,7 @@ run:
       -out signed-64/cf_installer.exe
     rm -f cf_installer.exe
 
-    zip -j signed-windows-zips/cf-cli-installer_${VERSION}_winx64.zip signed-64/cf_installer.exe
+    zip -j signed-windows-zips/cf-cli-installer_${VERSION}_winx64.zip LICENSE NOTICE signed-64/cf_installer.exe
 
     unzip winstallers/cf-cli-installer_win32.zip
 
@@ -56,4 +59,4 @@ run:
       -in cf_installer.exe \
       -out signed-32/cf_installer.exe
 
-    zip -j signed-windows-zips/cf-cli-installer_${VERSION}_win32.zip signed-32/cf_installer.exe
+    zip -j signed-windows-zips/cf-cli-installer_${VERSION}_win32.zip LICENSE NOTICE signed-32/cf_installer.exe
