--- a/cli/tasks/build-binaries.yml
+++ b/cli/tasks/build-binaries.yml
@@ -32,11 +32,15 @@ run:
       echo "Building 32-bit Linux"
       CGO_ENABLED=0 GOARCH=386 GOOS=linux go build -a -tags netgo -installsuffix netgo -ldflags "-extldflags \"-static\" ${VERSION_LDFLAGS}" -o out/cf-cli_linux_i686 .
 
-      echo "Building 32-bit Windows"
-      GOARCH=386 GOOS=windows go build -tags="forceposix" -ldflags "${VERSION_LDFLAGS}" -o out/cf-cli_win32.exe .
-
       echo "Building 64-bit Linux"
       CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -a -tags netgo -installsuffix netgo -ldflags "-extldflags \"-static\" ${VERSION_LDFLAGS}" -o out/cf-cli_linux_x86-64 .
+
+      # This to to add the CF Icon into the windows executable
+      go get github.com/akavel/rsrc
+      rsrc -ico ci/installers/windows/cf.ico
+
+      echo "Building 32-bit Windows"
+      GOARCH=386 GOOS=windows go build -tags="forceposix" -ldflags "${VERSION_LDFLAGS}" -o out/cf-cli_win32.exe .
 
       echo "Building 64-bit Windows"
       GOARCH=amd64 GOOS=windows go build -tags="forceposix" -ldflags "${VERSION_LDFLAGS}" -o out/cf-cli_winx64.exe .
