--- a/cli-release/tasks/sign-windows-binaries.yml
+++ b/cli-release/tasks/sign-windows-binaries.yml
@@ -22,7 +22,7 @@ run:
   - |
     set -ex
 
-    unzip edge-windows-binary-64/cf-cli_edge_winx64.zip
+    unzip -o edge-windows-binary-64/cf-cli_edge_winx64.zip
 
     osslsigncode sign \
       -pkcs12 certificates/$CERT_LOCATION \
@@ -33,7 +33,7 @@ run:
       -out extracted-binaries/cf-cli_winx64.exe
     rm -f cf.exe
 
-    unzip edge-windows-binary-32/cf-cli_edge_win32.zip
+    unzip -o edge-windows-binary-32/cf-cli_edge_win32.zip
 
     osslsigncode sign \
       -pkcs12 certificates/$CERT_LOCATION \
